# roswell

./: .appveyor.yml  .gitignore  .travis.yml  COPYING  ChangeLog  HACKING.md  INSTALL.md  ISSUE_TEMPLATE.md  Makefile.am  README  README.md  archive-unix.go  bootstrap  circle.yml  cmd-config.go  cmd-install-sbcl-bin-unix.go  cmd-install-sbcl-bin.go  cmd-install.go  cmd-internal.go  config.go  configure.ac  download.go  html.go  lsp.go  opt.go  roswell-test.asd  roswell.asd  travis-install.sh  travis-roswell.enc  util-dir.go  util-system.go  util-unix.go  util-windows.go  util.go
.github/workflows/: build.yml  ccpp.yml  docker-build.yml  linux.yml  osx.yml  test.yml  windows.yml
debian/: README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  control  copyright  debian.ros  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  roswell.cron.d.ex  roswell.default.ex  roswell.doc-base.EX  roswell.substvars  rules  watch.ex
documents/: Makefile.am  chm.ros  default.html  make-doc-markdown.sh  markdown-sample  ros-asdf.md  ros-build.md  ros-checkout.md  ros-client.md  ros-config.1  ros-config.html  ros-config.md  ros-delete.1  ros-delete.html  ros-delete.md  ros-dist.md  ros-dump.1  ros-dump.html  ros-dump.md  ros-emacs.1  ros-emacs.html  ros-emacs.md  ros-help.md  ros-init.1  ros-init.html  ros-init.md  ros-install.1  ros-install.html  ros-install.md  ros-list.1  ros-list.html  ros-list.md  ros-run.1  ros-run.html  ros-run.md  ros-serve.md  ros-setup.1  ros-setup.html  ros-setup.md  ros-template.md  (+13 more)
documents/html/: ros-asdf.html  ros-build.html  ros-checkout.html  ros-client.html  ros-config.html  ros-delete.html  ros-dist.html  ros-dump.html  ros-emacs.html  ros-help.html  ros-init.html  ros-install.html  ros-list.html  ros-run.html  ros-serve.html  ros-setup.html  ros-template.html  ros-update.html  ros-use.html  ros-wait.html  ros.css  ros.html
documents/man/: ros-asdf.1  ros-build.1  ros-checkout.1  ros-client.1  ros-config.1  ros-delete.1  ros-dist.1  ros-dump.1  ros-emacs.1  ros-help.1  ros-init.1  ros-install.1  ros-list.1  ros-run.1  ros-serve.1  ros-setup.1  ros-template.1  ros-update.1  ros-use.1  ros-wait.1  ros.1
etc/bash-completion.d/: ros
lisp/: +roswell-internal-core-build.ros  CONTRIBUTING.md  Makefile.am  asdf.ros  balus.ros  build-asd.lisp  build-ros.lisp  build.ros  checkout.ros  client-swank.lisp  client.ros  compile-file.ros  config.ros  default  delete-asdf.lisp  delete-default.lisp  delete-dump.lisp  delete-env.lisp  delete-git.lisp  delete.ros  dist-add.lisp  dist-clean.lisp  dist-default.lisp  dist-delete.lisp  dist-disable.lisp  dist-enable.lisp  dist-list.lisp  dist-preference.lisp  dist-use.lisp  dist-versions.lisp  dist.ros  dump-ccl.lisp  dump-clisp.lisp  dump-cmucl.lisp  dump-ecl.lisp  dump-sbcl.lisp  dump.ros  ecl-config.ros  emacs.ros  exec.ros  (+92 more)
pack/: configure.ac
patch/: Makefile.am  sbcl-1.3.11.patch  sbcl-posix-tests.patch
recipes/: default.rb
samples/: debian.ros  hello.ros
scripts/: Makefile  Makefile.am  build-appimage.sh  chm.ros  debian.ros  homebrew.ros  install-for-ci.PS1  install-for-ci.sh  make-table.ros  man.ros  release.ros  travis-install.sh  upload.ros  wxs.ros
scripts/Docker/deb/: Dockerfile  Name
scripts/Docker/musl64/: Dockerfile  Name
scripts/Docker/pandoc/: Dockerfile  Name
scripts/completion-bash/: ros
scripts/completions/: ros-completion.bash  ros-completion.zsh
scripts/res/: roswell.rb.emb
src/: +roswell-internal-core-build.ros  CONTRIBUTING.md  Makefile.am  archive.c  archive_windows.c  asdf.ros  build.ros  cmd-config.c  cmd-help.c  cmd-install-quicklisp.c  cmd-install-sbcl-bin.c  cmd-install.c  cmd-install.h  cmd-internal.c  cmd-run-abcl.c  cmd-run-acl.c  cmd-run-ccl.c  cmd-run-clasp.c  cmd-run-clisp.c  cmd-run-cmu.c  cmd-run-ecl.c  cmd-run-lispworks.c  cmd-run-mkcl.c  cmd-run-npt.c  cmd-run-sbcl.c  cmd-run.c  cmd-run.h  cmd-script.c  cmd-setup.c  cmd-version.c  cmd_install.c  cmd_run.c  cmd_version.c  delete.ros  download.c  download_windows.c  dump.ros  generate.c  html-sbcl-bin.c  html.c  (+43 more)
src/cmds/config/: cmd.c
src/cmds/help/: cmd.c
src/cmds/install/: cmd.c  quicklisp.c  ros_install.h  sbcl-bin.c  sbcl.c
src/cmds/list/: cmd.c
src/cmds/pull/: cmd.c  pull.h  sbcl-bin.c  sbcl.c
src/cmds/run/: ccl.c  cmd.c  sbcl.c
src/cmds/setup/: cmd.c
src/cmds/version/: cmd.c
src/install/: Makefile.am  cmd.c  sbcl.c
src/lisp/: +asdf.ros  +roswell-internal-core-build.ros  asdf.lisp  asdf.ros  build.ros  delete.ros  dump.ros  emacs.ros  init.lisp  init.ros  install+asdf3.lisp  install+clisp.lisp  install+ecl.lisp  install+ffcall.lisp  install+msys.lisp  install+msys2.lisp  install+quicklisp.lisp  install-ccl-bin.lisp  install-clisp.lisp  install-ecl.lisp  install-quicklisp.lisp  install-sbcl.lisp  install.lisp  install.ros  list.ros  output.ros  slime.ros  use.ros  wait.ros
src/lisp/install/: 7zip.lisp  ccl-bin.lisp  clisp.lisp  msys.lisp  quicklisp.lisp  sbcl-bin.lisp  sbcl.lisp
src/list/: cmd.c
src/pull/: cmd.c  install.h  sbcl-bin.c  sbcl.c
t/: 00init.test  ros.lisp  roswell.ros  test-template
t/tree-shaker/: Makefile  aaa.ros
tree-shaker/: Makefile  test-tree-shaker.sh
