roslispdir = $(sysconfdir)/$(PACKAGE)
roslisp_DATA = helper.el \
	init.lisp \
	util.lisp \
	util-swank.lisp \
	locations.lisp \
	patch-quicklisp.lisp \
	system.lisp \
	\
	asdf.ros \
	build.ros \
	config.ros \
	emacs.ros \
	fmt.ros \
	get.ros \
	git.ros \
	run.ros \
	setup.ros \
	shell.ros \
	template.ros \
	version.ros \
	wait.ros \
	\
	delete.ros \
	delete-dump.lisp \
	\
	dump.ros \
	dump-ccl.lisp dump-clisp.lisp \
	dump-cmucl.lisp dump-ecl.lisp dump-sbcl.lisp \
	\
	help.ros \
	help-install.lisp help-options.lisp help-run.lisp \
	\
	init.ros \
	init-default.lisp \
	\
	install.ros \
	util-install.lisp util-install-quicklisp.lisp \
	install+7zip.lisp install-abcl-bin.lisp install-allegro.lisp \
	install-ccl-bin.lisp install-clasp.lisp install-clisp.lisp \
	install-cmu-bin.lisp install-ecl.lisp install-quicklisp.lisp \
	install-sbcl-bin.lisp install-sbcl.lisp install-slime.lisp \
	install+externals-clasp.lisp install+ffcall.lisp \
	install+msys2.lisp install+sigsegv.lisp \
	\
	update.ros \
	update-git.lisp update-hg.lisp update-quicklisp.lisp \
	\
	list.ros \
	list-dump.lisp list-git.lisp list-installed.lisp list-versions.lisp \
	\
	use.ros \
	util-use.lisp
