AC_PREREQ([2.59])
AC_INIT()

AM_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SRCDIR([Makefile.am])
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE([disable])

roslispdir='${prefix}/etc/roswell'
AC_SUBST(roslispdir)
roslisppatchdir='${roslispdir}/patch'
AC_SUBST(roslisppatchdir)

AC_OUTPUT
